[workspace]
members = [
    "seeker",
    "dnsserver",
    "ssclient",
    "sysconfig",
    "config",
    "crypto",
    "hermesdns",
    "socks5_client",
    "tun_nat",
    "http_proxy_client",
    "tcp_connection",
]

[profile.release]
lto = "thin"
codegen-units = 1
incremental = false

[workspace.metadata.workspaces]
no_individual_tags = true
independent = false

[patch.crates-io]
tracing-chrome = { git = "https://github.com/gfreezy/tracing-chrome", rev = "2a3dbfe" }
