[workspace]
members = [
    "seeker",
    "dnsserver",
    "ssclient",
    "sysconfig",
    "config",
    "crypto",
    "hermesdns",
    "socks5_client",
    "tun_nat",
    "http_proxy_client",
    "tcp_connection",
    "store",
]
resolver = "2"

[profile.release]
lto = "thin"
codegen-units = 1
incremental = false
strip = true

[workspace.metadata.workspaces]
no_individual_tags = true
independent = false

[workspace.dependencies]
anyhow = "1.0.65"
async-std = "1.12.0"
async-std-resolver = "0.24.1"
async-trait = "0.1.57"
bitvec = "1.0.1"
byte_string = "1.0.0"
byteorder = "1.4.3"
bytes = "1.2.1"
cfg-if = "1.0"
chrono = "0.4.22"
clap = "3"
ctrlc = "3.0"
digest = "0.10.5"
dyn-clone = "1.0.9"
file-rotate = "0.7.0"
futures-util = "0.3.24"
hkdf = "0.12.3"
libc = "0.2.133"
libsodium-sys-stable = "1.19.23"
maxminddb = "0.23"
md-5 = "0.10.4"
memchr = "2.5.0"
nanorand = "0.7.0"
nix = "0.26"
once_cell = "1.16"
openssl = "0.10.66"
os_socketaddr = "0.2"
parking_lot = "0.12.1"
percent-encoding = "2.1.0"
rand = "0.8.5"
ring = "0.16.20"
rusqlite = "0.28"
serde = "1.0.144"
serde_yaml = "0.9.13"
sha-1 = "0.10.0"
smoltcp = { version = "0.8.1", default-features = false }
tempfile = "3.3.0"
testcontainers = "0.14.0"
tracing = "0.1.36"
tracing-chrome = "0.7"
tracing-futures = { version = "0.2.5", default-features = false }
tracing-subscriber = "0.3.15"
typenum = "1.15.0"
ureq = "2.5.0"
url = "2.3.1"
async-tls = "0.12.0"
base64 = "0.20.0"

[patch.crates-io]
tracing-chrome = { git = "https://github.com/gfreezy/tracing-chrome", rev = "2a3dbfe" }
