[workspace]
members = [
    "seeker",
    "dnsserver",
    "ssclient",
    "sysconfig",
    "config",
    "crypto",
    "hermesdns",
    "socks5_client",
    "tun_nat",
    "http_proxy_client",
    "tcp_connection",
    "store",
]
resolver = "2"

[profile.release]
lto = "thin"
codegen-units = 1
incremental = false
strip = true
debug = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.workspaces]
no_individual_tags = true
independent = false

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
publish = false

[workspace.dependencies]
anyhow = "1.0"
async-std = { version = "1", features = ["default", "io_safety"] }
async-std-resolver = "0.24"
async-trait = "0.1"
bitvec = "1.0"
byte_string = "1.0"
byteorder = "1.4"
bytes = "1.2"
cfg-if = "1.0"
chrono = "0.4"
clap = "4"
ctrlc = "3.0"
digest = "0.10"
dyn-clone = "1.0"
file-rotate = "0.7"
futures-util = "0.3"
hkdf = "0.12"
libc = "0.2"
libsodium-sys-stable = "1.19"
maxminddb = "0.24"
md-5 = "0.10"
memchr = "2.5"
nanorand = "0.7"
nix = "0.29"
once_cell = "1.16"
openssl = "0.10"
os_socketaddr = "0.2"
parking_lot = "0.12.1"
percent-encoding = "2.1"
rand = "0.8"
ring = "0.17"
rusqlite = "0.32"
serde = "1.0"
serde_yaml = "0.9"
sha-1 = "0.10"
smoltcp = { version = "0.12", default-features = false }
tempfile = "3.3"
testcontainers = "0.23"
tracing = "0.1"
tracing-chrome = "0.7"
tracing-futures = { version = "0.2", default-features = false }
tracing-subscriber = "0.3"
typenum = "1.15"
ureq = "2.5"
url = "2.3"
async-tls = "0.13"
base64 = "0.20"
notify-debouncer-mini = "0.5"
[patch.crates-io]
tracing-chrome = { git = "https://github.com/gfreezy/tracing-chrome", rev = "2a3dbfe" }
