[package]
name = "config"
version = "0.5.1"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.144", features = ["derive", "rc"] }
url = { version = "2.3.1", features = ["serde"] }
serde_yaml = "0.9.13"
bytes = "1.2.1"
crypto = { path = "../crypto" }
socks5_client = { path = "../socks5_client" }
tcp_connection = { path = "../tcp_connection" }
smoltcp = { version = "0.8.1", default-features = false, features = [
    "proto-ipv6",
    "proto-ipv4",
    "std",
] }
base64 = "0.13.1"
percent-encoding = "2.1.0"
tracing = "0.1.29"
ureq = "2.5"
