[package]
name = "config"
version = "20241112.0.0"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
url = { workspace = true, features = ["serde"] }
serde_yaml = { workspace = true }
bytes = { workspace = true }
crypto = { path = "../crypto" }
socks5_client = { path = "../socks5_client" }
tcp_connection = { path = "../tcp_connection" }
smoltcp = { workspace = true, features = ["proto-ipv6", "proto-ipv4", "std"] }
base64 = { workspace = true }
percent-encoding = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true }
maxminddb = { workspace = true }
parking_lot = { workspace = true }
store = { path = "../store" }

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }
