[package]
name = "crypto"
version = "0.1.0"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.2.1"
rand = "0.8.5"
md-5 = "0.10.4"
digest = "0.10.5"
typenum = "1.15.0"
byte_string = "1.0.0"
byteorder = "1.4.3"
openssl = { version = "0.10.60", optional = true, features = ["vendored"] }
libc = "0.2.133"
hkdf = "0.12.3"
sha-1 = "0.10.0"
libsodium-sys-stable = { version = "1.19.23", optional = true }
ring = { version = "0.16.20", optional = true }

[features]
default = ["sodium", "rc4", "aes-cfb", "aes-ctr", "camellia-cfb", "use-ring"]
sodium = ["libsodium-sys-stable"]
rc4 = ["openssl"]
aes-cfb = ["openssl"]
aes-ctr = ["openssl"]
camellia-cfb = ["openssl"]
use-ring = ["ring"]
