[package]
name = "crypto"
version = "20241111.0.1"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
rand = { workspace = true }
md-5 = { workspace = true }
digest = { workspace = true }
typenum = { workspace = true }
byte_string = { workspace = true }
byteorder = { workspace = true }
openssl = { workspace = true, features = ["vendored"], optional = true }
libc = { workspace = true }
hkdf = { workspace = true }
sha-1 = { workspace = true }
libsodium-sys-stable = { workspace = true, optional = true }
ring = { workspace = true, optional = true }

[features]
default = ["sodium", "aes-cfb", "aes-ctr", "camellia-cfb", "use-ring"]
sodium = ["libsodium-sys-stable"]
aes-cfb = ["openssl"]
aes-ctr = ["openssl"]
camellia-cfb = ["openssl"]
use-ring = ["ring"]
rc4 = []
miscreant = []
