[package]
name = "dnsserver"
version = "20241106.0.0"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { workspace = true }
hermesdns = { path = "../hermesdns" }
config = { path = "../config" }
async-trait = { workspace = true }
tracing = { workspace = true }
async-std-resolver = { workspace = true }
store = { path = "../store" }
parking_lot = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
