[package]
name = "dnsserver"
version = "20260127.0.0"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
hermesdns = { path = "../hermesdns" }
config = { path = "../config" }
async-trait = { workspace = true }
tracing = { workspace = true }
hickory-resolver = { workspace = true }
hickory-proto = { workspace = true }
store = { path = "../store" }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio-test = "0.4"
