[package]
name = "hermesdns"
version = "0.1.0"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
chrono = "0.4.22"
async-trait = "0.1.57"
tracing = "0.1.36"
tracing-futures = { version = "0.2.5", features = [
    "std-future",
], default-features = false }
async-std = { version = "1.12.0", features = ["unstable"] }
