[package]
name = "hermesdns"
version = "20240830.0.1"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-futures = { workspace = true, features = ["std-future"] }
async-std = { workspace = true, features = ["unstable"] }
