[package]
name = "http_proxy_client"
version = "20250807.0.0"
authors = ["Alex.F <gfreezy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
config = { path = "../config" }
base64 = { workspace = true }
tokio-native-tls = "0.3"
parking_lot = { workspace = true }
