[package]
name = "hysteria2_client"
version = "20260127.0.0"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2021"

[dependencies]
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std"] }
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1"
blake2 = "0.10"
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
config = { path = "../config" }
rand = { workspace = true }
anyhow = { workspace = true }
parking_lot = { workspace = true }
futures-util = { workspace = true }
rustls-native-certs = "0.8"

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
hickory-resolver = { workspace = true }
testcontainers = { workspace = true }
rcgen = "0.13"
tempfile = { workspace = true }
