[package]
name = "hysteria2_client"
version = "20260411.0.0"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2021"

[features]
integration-tests = [
    "dep:testcontainers",
    "dep:tracing-subscriber",
    "dep:rcgen",
]

[dependencies]
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rustls = { workspace = true }
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1"
blake2 = "0.10"
tokio = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
config = { path = "../config" }
rand = { workspace = true }
parking_lot = { workspace = true }
futures-util = { workspace = true }
rustls-native-certs = "0.8"
testcontainers = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }
rcgen = { version = "0.13", optional = true }

[dev-dependencies]
tokio-rustls = { workspace = true }
tcp_connection = { path = "../tcp_connection" }
