[package]
name = "seeker"
version = "20260411.0.0"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2024"
repository = "https://github.com/gfreezy/seeker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "local-time"] }
tracing-futures = { workspace = true, features = ["std-future"] }
tracing-chrome = { workspace = true, optional = true }
config = { path = "../config" }
dnsserver = { path = "../dnsserver" }
ssclient = { path = "../ssclient" }
socks5_client = { path = "../socks5_client" }
http_proxy_client = { path = "../http_proxy_client" }
hysteria2_client = { path = "../hysteria2_client" }
trojan_client = { path = "../trojan_client" }
vmess_client = { path = "../vmess_client" }
vless_client = { path = "../vless_client" }
sysconfig = { path = "../sysconfig" }
tun_nat = { path = "../tun_nat" }
file-rotate = { workspace = true }
tokio = { workspace = true }
tokio-native-tls = "0.3"
native-tls = "0.2"
parking_lot = { workspace = true, features = ["deadlock_detection"] }
ctrlc = { workspace = true, features = ["termination"] }
libc = { workspace = true }
futures-util = { workspace = true }
clap = { workspace = true, features = ["derive"] }
hickory-resolver = { workspace = true }
hickory-proto = { workspace = true }
ureq = { workspace = true, features = ["json"] }
crypto = { path = "../crypto" }
bytes = { workspace = true }
base64 = { workspace = true }
anyhow = { workspace = true }
tcp_connection = { path = "../tcp_connection" }
store = { path = "../store" }
nix = { workspace = true, features = ["socket", "net"] }
notify-debouncer-mini = { workspace = true }
socket2 = { version = "0.5", features = ["all"] }
crossbeam-channel = "0.5"
axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
testcontainers = { workspace = true, optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
system-configuration = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-route = { workspace = true }
netlink-packet-core = { workspace = true }
netlink-sys = { workspace = true }

[features]
tracing-chrome = ["dep:tracing-chrome"]
integration-tests = ["dep:testcontainers"]


[package.metadata.bundle]
name = "seeker"
identifier = "io.allsunday.seeker"
