[package]
name = "socks5_client"
version = "0.1.0"
authors = ["Alex.F <gfreezy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
async-std = { git = "https://github.com/gfreezy/async-std", rev = "0cd2685" }
