[package]
name = "socks5_client"
version = "20260411.0.0"
authors = ["Alex.F <gfreezy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
integration-tests = ["dep:testcontainers"]

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true }
testcontainers = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
