[package]
name = "ssclient"
version = "0.1.0"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.35"
bytes = "1.2.0"
byteorder = "1.4.3"
config = { path = "../config" }
crypto = { path = "../crypto" }
async-std = "1.12.0"
parking_lot = "0.12.1"
tcp_connection = { path = "../tcp_connection" }

[dev-dependencies]
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
