[package]
name = "ssclient"
version = "20250331.0.0"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
config = { path = "../config" }
crypto = { path = "../crypto" }
async-std = { workspace = true }
parking_lot = { workspace = true }
tcp_connection = { path = "../tcp_connection" }

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["env-filter"] }
