[package]
name = "store"
version = "20260127.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { workspace = true, features = ["bundled"] }
anyhow = { workspace = true, features = ["backtrace"] }
once_cell = { workspace = true }
parking_lot = { workspace = true }
