[package]
name = "sysconfig"
version = "0.1.0"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
failure = "0.1.5"
tracing = "0.1"
libc = "0.2.62"

[target.'cfg(target_os="macos")'.dependencies]
libproc = { git = "https://github.com/gfreezy/libproc-rs", rev = "bffc2c4" }
