[package]
name = "sysconfig"
version = "20241106.0.0"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tracing = { workspace = true }
libc = { workspace = true }

[target.'cfg(target_os="macos")'.dependencies]
libproc = { git = "https://github.com/gfreezy/libproc-rs", rev = "bffc2c4" }

[target.'cfg(target_os="linux")'.dependencies]
procfs = "0.14.1"
