[package]
name = "tcp_connection"
version = "20250807.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = { workspace = true }
async-std = { workspace = true }
nanorand = { workspace = true }
memchr = { workspace = true }
serde = { workspace = true, features = ["derive"] }
base64 = { workspace = true }

[dev-dependencies]
async-std = { workspace = true, features = ["attributes"] }

[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
testcontainers = { workspace = true }
