[package]
name = "tcp_connection"
version = "20260411.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
integration-tests = ["dep:testcontainers"]

[dependencies]
tokio = { workspace = true }
nanorand = { workspace = true }
memchr = { workspace = true }
serde = { workspace = true, features = ["derive"] }
base64 = { workspace = true }
testcontainers = { workspace = true, optional = true }
