[package]
name = "trojan_client"
version = "20260411.0.0"
authors = ["Alex.F <gfreezy@gmail.com>"]
edition = "2021"

[features]
integration-tests = ["dep:testcontainers", "dep:rcgen"]

[dependencies]
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
config = { path = "../config" }
tcp_connection = { path = "../tcp_connection" }
bytes = { workspace = true }
sha2 = { workspace = true }
parking_lot = { workspace = true }
testcontainers = { workspace = true, optional = true }
rcgen = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
tcp_connection = { path = "../tcp_connection" }
