[package]
name = "tun"
version = "0.1.0"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
libc = "0.2.62"
async-std = { git = "https://github.com/gfreezy/async-std", rev = "3b3f0f9f27e74ec6b7eb027d292ede25350b032d"}
sysconfig = { path = "../sysconfig" }
lazy_static = "1.4.0"
managed = "0.7.1"
mio = "0.6.19"
parking_lot = "0.9.0"

[dependencies.smoltcp]
git = "https://github.com/gfreezy/smoltcp"
rev = "d64d6b9"
default-features = false
features = [
	"std", "log",
	"proto-ipv4",
	"socket-udp",
	"socket-tcp",
	"phy-raw_socket",
]
