[package]
name = "tun"
version = "0.1.0"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
libc = "0.2.62"
async-std = { git = "https://github.com/gfreezy/async-std", rev = "6d76f399"}
sysconfig = { path = "../sysconfig" }
lazy_static = "1.4.0"
managed = "0.7.1"
mio = "0.6.19"
parking_lot = "0.9.0"

[dependencies.smoltcp]
git = "https://github.com/gfreezy/smoltcp"
rev = "ef17f0b"
default-features = false
features = [
	"std", "log",
	"proto-ipv4",
	"socket-udp",
	"socket-tcp",
	"phy-raw_socket",
	"ethernet",
]
