[package]
name = "tun_nat"
version = "20240830.0.1"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { workspace = true }
sysconfig = { path = "../sysconfig" }
parking_lot = { workspace = true }
bitvec = { workspace = true }
smoltcp = { workspace = true, features = ["proto-ipv6", "proto-ipv4", "std"] }
tracing = { workspace = true }
