[package]
name = "tun_nat"
version = "20250331.0.0"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun-rs = "2.5.7"
route_manager = "0.2.6"
sysconfig = { path = "../sysconfig" }
parking_lot = { workspace = true }
bitvec = { workspace = true }
smoltcp = { workspace = true, features = ["proto-ipv6", "proto-ipv4", "std"] }
tracing = { workspace = true }
crossbeam-channel = "0.5.8"
object-pool = "0.6.0"
