[package]
name = "vless_client"
version = "20260411.0.0"
authors = ["Alex.F <gfreezy@gmail.com>"]
edition = "2021"

[features]
integration-tests = ["dep:testcontainers", "dep:native-tls", "dep:rcgen"]

[dependencies]
tokio = { workspace = true }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
webpki-roots = "0.26"
config = { path = "../config" }
bytes = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
testcontainers = { workspace = true, optional = true }
native-tls = { version = "0.2", optional = true }
rcgen = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-native-tls = "0.3"
