[package]
name = "vless_client"
version = "20260411.0.0"
authors = ["Alex.F <gfreezy@gmail.com>"]
edition = "2021"

[features]
integration-tests = ["dep:testcontainers", "dep:rcgen"]

[dependencies]
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
config = { path = "../config" }
tcp_connection = { path = "../tcp_connection" }
bytes = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
testcontainers = { workspace = true, optional = true }
rcgen = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { workspace = true }
