[package]
name = "vmess_client"
version = "20260127.0.0"
edition = "2021"

[features]
integration-tests = ["dep:testcontainers", "dep:native-tls", "dep:tokio-native-tls", "dep:rcgen"]

[dependencies]
tokio = { workspace = true }
config = { path = "../config" }
bytes = { workspace = true }
md-5 = { workspace = true }
hmac = { workspace = true }
uuid = { workspace = true }
openssl = { workspace = true, features = ["vendored"] }
rand = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
digest = { workspace = true }
testcontainers = { workspace = true, optional = true }
native-tls = { version = "0.2", optional = true }
tokio-native-tls = { version = "0.3", optional = true }
rcgen = { version = "0.13", optional = true }

[dev-dependencies]
serde_json = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
