[package]
name = "vmess_client"
version = "20260411.0.0"
edition = "2021"

[package.metadata.cargo-machete]
# md-5 imports as `md5`; cargo-machete can't detect the rename.
ignored = ["md-5"]

[features]
integration-tests = ["dep:testcontainers"]

[dependencies]
tokio = { workspace = true }
config = { path = "../config" }
bytes = { workspace = true }
md-5 = { workspace = true }
hmac = { workspace = true }
uuid = { workspace = true }
aes = { workspace = true }
cfb-mode = { workspace = true }
cipher = { workspace = true }
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
digest = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
testcontainers = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
tcp_connection = { path = "../tcp_connection" }
