[package]
name = "hermesdns"
version = "0.1.0"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
chrono = "0.4.11"
async-trait = "0.1.13"
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["std-future"], default-features = false }
async-std = { git = "https://github.com/gfreezy/async-std", rev = "0cd2685", features = ["unstable"]}
